--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="https://stageandsoundrentalco.github.io/Avalonroofingservices.Eco-Friendly-Roofing-A-Smart-Choice-for-Sustainable-Homes/">https://stageandsoundrentalco.github.io/Avalonroofingservices.Eco-Friendly-Roofing-A-Smart-Choice-for-Sustainable-Homes/</a><br>    
-                <a target="_bLank" href="https://avalonroofingcloudstack.s3.us-east-005.backblazeb2.com/Eco-Friendly+Roofing:+A+Smart+Choice+for+Sustainable+Homes/index.html">https://avalonroofingcloudstack.s3.us-east-005.backblazeb2.com/Eco-Friendly+Roofing:+A+Smart+Choice+for+Sustainable+Homes/index.html</a><br>
-                <a target="_bLank" href="https://avalonroofingservice-git-96d592-stageandsoundrentalcos-projects.vercel.app/">https://avalonroofingservice-git-96d592-stageandsoundrentalcos-projects.vercel.app/</a><br>
-                <a target="_bLank" href="https://wondrous-kheer-de9ab3.netlify.app/">https://wondrous-kheer-de9ab3.netlify.app/</a><br>
+                <a target="_bLank" href="https://stageandsoundrentalco.github.io/avalonroofingservices.Eco-Friendly-Roofing-A-Smart-Choice-for-Sustainable-Homes1/">https://stageandsoundrentalco.github.io/avalonroofingservices.Eco-Friendly-Roofing-A-Smart-Choice-for-Sustainable-Homes1//a><br>    
+                <a target="_bLank" href="https://avalonroofingcloudstack.s3.us-east-005.backblazeb2.com/Eco-Friendly+Roofing:+A+Smart+Choice+for+Sustainable+Homes1/index.html">https://avalonroofingcloudstack.s3.us-east-005.backblazeb2.com/Eco-Friendly+Roofing:+A+Smart+Choice+for+Sustainable+Homes1/index.html</a><br>
+                <a target="_bLank" href="https://avalonroofingservice-git-551f36-stageandsoundrentalcos-projects.vercel.app/">https://avalonroofingservice-git-551f36-stageandsoundrentalcos-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://legendary-gingersnap-7e7610.netlify.app/">https://legendary-gingersnap-7e7610.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
